     the game.
 --  Added automagic date parsing as part of convtime. The date parser supports
     free-form dates and also ISO formats including year/day, month/day, and
     weekofyear/dayofweek.
 --  Morgan added @conformat and @exitformat from PennMUSH.
 --  Marlek added @nameformat.
 --  Hellspawn added @dolist/notify.
 --  Hellspawn added @notify/quiet.


Bug Fixes:
~~~~~~~~~
 --  Fixed: merge() let *bufc point one character too far.
 --  Fixed: space() SIGSEGV
 --  Fixed: lparent endless loop.
 --  Fixed: bad_command and shout log buffer overrun.
 --  Fixed: welcome screen character creation SIGSEGV
 --  Fixed: @mail could go blank if too large.
 --  Fixed: Players couldn't test dark wizards for AUDIBLE.
 --  Fixed: @mailer queuing loop if mailer was disabled.
 --  Fixed: help topic aliases were shown.
 --  Fixed: Removed DarkZone 990 character limits.
 --  Fixed: non-players can no longer use @mail.
 --  Fixed: @clone stepped on pennies.
 --  Fixed: @ps was not showing @wait 0 commands.
 --  Fixed: SIGSEGV in dbconvert with object @locked to sex:f when no other
     user-defined attributes have been defined.
 --  Fixed: subtle bug in ANSI_TruncateToField going from normal to normal
     color near the end of the buffer.
 --  Fixed: Buffer trash problem with delete() function.
 --  Fixed: Rounding bug in time_format_1 (affected WHO).
 --  Fixed: fun_ansi used ANSI_TruncateToField with the wrong field size.
 --  Fixed: idle() returned '0' for unconnected players instead of '-1'.
 --  Fixed: Protect math libraries against NaN and Inf with IEEE
     floating-point goo.
 --  Fixed: SIGSEGV bug in before() and after() if no second parameter
     was given.
 --  Fixed: HAVE_WAIT3 build issue on FreeBSD.
 --  Fixed: bsd.cpp SIGUSR1 blockage. The second SIGUSR1 would not be
     caught.
 --  Fixed: @program me SIGSEGV.
 --  Fixed: @pemit/list to a list of players sometimes used strtok a
     second time.